Algunas modificaciones del cliente

--- a/nosotros.html
+++ b/nosotros.html
@@ -44,51 +44,25 @@
 			<div class="span10 offset1 nosotros">
 				<h2>¿Quienes Somos?</h2>
 				<img src="images/content/nosotros1.jpg" alt="Nosotros Microfundicion FGLE" class="imagen_nosotros" />
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Somos una empresa orientada a brindar soluciones integrales, innovadoras, rápidas y confiables, con tecnología internacional y mano de obra nacional.</p>
+				<p>Desarrollamos productos únicos y exclusivos para nuestros clientes de diferentes industrias tales como: artículos publicitarios, confección, merchandising, marroquinería, y calzado.</p>
+				<p>Los artículos que trabajamos son elaborados en zamac, empleando tecnología italiana y materia prima de óptima calidad en los procesos de fundición, pulido y galvanizado, aplicando en cada uno de ellos procesos de última generación y mano de obra calificada.</p>
+				<p>Nuestros accesorios se amoldan a las necesidades de cada cliente, garantizando con nuestra calidad mejorar y fortalecer la imagen de sus productos.</p>
+				<p><strong>FABRICAMOS:</strong> Llaveros - Insignias - Medallas - Ceniceros - Abrecartas - Aprietacorbatas Placas - Tarjeteros - Hebillas - Destapadores - Bijouteries - Juegos De Ajedrez</p>
+				<p><strong>ARTICULOS PARA CONFECCION:</strong> Botones - Remaches - Apliques - Portacalendarios - Herrajes - Emblemas Para Automoviles - Piezas Tecnicas Para Diferentes Aplicaciones.</p>
 				<h2>Mision</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<h2>Valores</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Fabricar artículos microfundidos de todo tipo tanto para aplicaciones industriales o publicitarios cumplimiento con las exceptivas de nuestros clientes, integrando los más altos estándares de calidad, garantizando así la total satisfacción en nuestro servicio.</p>
 				<h2>Vision</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Ser la empresa líder en ofrecer artículos micro fundidos de tipo industrial o publicitarios con la calidad y el precio más competente dentro de la zona que nuestra ubicación, nos permite alcanzar, brindando a nuestros clientes una filosofía  de calidad total.</p>
+				<h2>Valores</h2>
+				<ul class="lista-valores">
+					<li><i class="icon-ok"></i> Responsabilidad</li>
+					<li><i class="icon-ok"></i> Excelencia impulsada por el cliente</li>
+					<li><i class="icon-ok"></i> Orientación hacia la obtención de resultados y la creación de valor</li>
+					<li><i class="icon-ok"></i> Innovación y creatividad</li>
+					<li><i class="icon-ok"></i> Responsabilidad con nuestro trabajo</li>
+					<li><i class="icon-ok"></i> Excelencia</li>
+				</ul>
 			</div>
 		</div>
 	</div>
