--- a/productos.html
+++ b/productos.html
@@ -63,7 +63,14 @@
 						<li><a href="#galery_placas" data-toggle="tab">Placas</a></li>
 						<li><a href="#galery_tarjeteros" data-toggle="tab">Tarjeteros</a></li>
 						<li><a href="#galery_placas_reconocimiento" data-toggle="tab">Placas de <br />Reconocimiento</a></li>
-						<li><a href="#galery_monedas" data-toggle="tab">Monedas</a></li>
+						<li><a href="#galery_abrecartas" data-toggle="tab">Abrecartas</a></li>
+						<li><a href="#galery_condecoraciones" data-toggle="tab">Condecoraciones</a></li>
+						<li><a href="#galery_confeccion" data-toggle="tab">Confeccion</a></li>
+						<li><a href="#galery_destapadores" data-toggle="tab">Destapadores</a></li>
+						<li><a href="#galery_medallas" data-toggle="tab">Medallas</a></li>
+						<li><a href="#galery_portanombres" data-toggle="tab">Portanombres</a></li>
+						<li><a href="#galery_trofeos" data-toggle="tab">Trofeos</a></li>
+						<li><a href="#galery_otros" data-toggle="tab">Otros</a></li>
 					</ul>
 					<div class="tab-content">
 						<div class="tab-pane active" id="galery_llaveros">
