--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Microfundicion FGLE</title>
+	<!-- Css Boostrap y propio -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/estilos.css" />
+	<!-- Google Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Overlock:400,700' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="js/live.js"></script>
+	<!-- Fin Google Fonts -->
+
+	<!-- Google Analitics -->
 	<script type="text/javascript">
 
 	  var _gaq = _gaq || [];
@@ -20,6 +24,8 @@
 	  })();
 
 	</script>
+	<!-- Fin Google Analitics -->
+	<script type="text/javascript" src="js/live.js"></script>
 </head>
 <body>
 	<header>
@@ -45,7 +51,7 @@
 				<div id="slides">
 					<div class="slides_container">
 						<div><img src="images/content/slide1.jpg" alt="Slide1" /></div>
-						<div><img src="images/content/slide2.jpg" alt="Slide2" /></div>
+						<!-- <div><img src="images/content/slide2.jpg" alt="Slide2" /></div> -->
 						<div><img src="images/content/slide3.jpg" alt="Slide3" /></div>
 						<div><img src="images/content/slide4.jpg" alt="Slide4" /></div>
 						<div><img src="images/content/slide5.jpg" alt="Slide5" /></div>
@@ -57,8 +63,7 @@
 		</div>
 		<div class="row">
 			<div class="span10 offset1 presentacion">
-				<h1>Somos Microfundicion FGLE</h1>
-				<p>Nosotros somos Microfundicion FGLE, una empresa dedicada a la fundicion de metales con el objetivo de.</p>
+				<h1>Microfundicion FGLE <small>Fortalezca la imagen de sus productos</small></h1>
 				<p>Nuestros productos van dirigidos a empresas establecidas con necesidad de publicidad clara y objetiva, también para darle prestigio a ocasiones memorables.</p>
 				<p><a href="nosotros.html" class="btn btn-danger">Conozca mas sobre Microfundicion FGLE</a></p>
 			</div>
@@ -71,10 +76,9 @@
 						<h4>Detalles que haran la diferencia</h4>
 					</span>
 				</div>
-				<img src="images/content/social_icon.png" alt="Siguenos" class="social_icon" />
+				<img src="images/content/fb_icon.png" alt="Siguenos" class="social_icon" />
 				<h2>Siguenos:</h2>
-				<p><a href="http://facebook.com/">Facebook.com/microfundicionfgle</a></p>
-				<p><a href="http://twitter.com/">@MicrofundicionFGLE</a></p>
+				<p><a href="http://www.facebook.com/microfundicionfgle.santodomingo">Facebook.com/microfundicionfgle</a></p>
 			</div>
 			<div class="span5">
 				<a href="productos.html">
@@ -96,6 +100,7 @@
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script src="js/slides.min.jquery.js"></script>
+	<!-- Opciones para Slide -->
 	<script type="text/javascript">
 		$(document).ready(function(){	
 			$('#slides').slides({
