--- a/contacto.html
+++ b/contacto.html
@@ -42,7 +42,18 @@
 	<div class="container contenido">
 		<div class="row">
 			<div class="span4 offset1">
-				<h2>Contacto</h2>
+				<h2>Contactanos</h2>
+				<p><strong>Telefonos:</strong> 809-221-3160 - 809-561-8921</p>
+				<p><strong>Gerente:</strong> Carlos Reyes <br />Cel: 809-935-1228 <br />Correo: vermery1213@hotmail.com</p>
+			</div>
+			<div class="span6">
+				<h2>Visitanos</h2>
+				<p>KM 10 de la autopista Duarte, cruce Mano Guayabo frente a Texaco.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="span4 offset1">
+				<h2>Escribenos</h2>
 				<form method="post">
 					<label for="form_nombre">Nombre:</label>
 					<input type="text" placeholder="Escriba su nombre..." id="form_nombre" name="nombre">
