--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<li><a href="#" class="current">Inicio</a></li>
 						<li><a href="nosotros.html">Nosotros</a></li>
 						<li><a href="productos.html">Productos</a></li>
-						<li><a href="contacto.php">Contactos</a></li>
+						<li><a href="contacto.html">Contactos</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -50,11 +50,10 @@
 			<div class="span10 offset1 slide">
 				<div id="slides">
 					<div class="slides_container">
-						<div><img src="images/content/slide1.jpg" alt="Slide1" /></div>
-						<!-- <div><img src="images/content/slide2.jpg" alt="Slide2" /></div> -->
-						<div><img src="images/content/slide3.jpg" alt="Slide3" /></div>
-						<div><img src="images/content/slide4.jpg" alt="Slide4" /></div>
-						<div><img src="images/content/slide5.jpg" alt="Slide5" /></div>
+						<div><img src="images/slide/slide1.jpg" alt="Slide1" /></div>
+						<div><img src="images/slide/slide3.jpg" alt="Slide3" /></div>
+						<div><img src="images/slide/slide4.jpg" alt="Slide4" /></div>
+						<div><img src="images/slide/slide5.jpg" alt="Slide5" /></div>
 					</div>
 					<a href="#" class="prev"></a>
 					<a href="#" class="next"></a>
@@ -71,10 +70,15 @@
 		<div class="row">
 			<div class="span5 offset1">
 				<div id="titulo_presentacion">
+					<a href="nosotros.html#concepto_trabajo">
+						<img src="images/content/concepto_mfgle.jpg" alt="Concepto Trabajo MicroFGLE" class="thumbnail">
+					</a>
+				<!--
 					<h2>Microfundicion FGLE</h2>
 					<span class="destacado">
 						<h4>Detalles que haran la diferencia</h4>
 					</span>
+				-->
 				</div>
 				<img src="images/content/fb_icon.png" alt="Siguenos" class="social_icon" />
 				<h2>Siguenos:</h2>
@@ -90,7 +94,7 @@
 	<footer class="container">
 		<div class="row">
 			<div class="span5 offset1">
-				<p>&copy; Todos los derechos reservados 2012-2013<br />Desarrollado por: <a href="http://kevinjimenezweb.com" class="desarrollador">Kevin Jimenez</a></p>
+				<p>&copy; Todos los derechos reservados 2012<br />Desarrollado por: <a href="http://kevinjimenezweb.com" class="desarrollador">Kevin Jimenez</a></p>
 			</div>
 			<div class="span3 offset3">
 				<img src="images/logo_blanco.png" alt="Microfundicion FGLE Logo Blanco">
