--- a/productos.html
+++ b/productos.html
@@ -34,7 +34,7 @@
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="nosotros.html">Nosotros</a></li>
 						<li><a href="#" class="current">Productos</a></li>
-						<li><a href="contacto.php">Contactos</a></li>
+						<li><a href="contacto.html">Contactos</a></li>
 					</ul>
 				</nav>
 			</div>
